# flipperzero-firmware

./: .assets.h.swp  .clang-format  .clangd  .drone.yml  .editorconfig  .gitattributes  .gitconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .gitremotes  .manifest  .pvsconfig  .pvsoptions  .sublime-project  .travis.yml  0.69.1-1018-RM-0228.tgz  0.69.1-1018-RM-0303.tgz  0.69.1-1018-RM-1656.tgz  0.69.1-1018-RM-1846.tgz  0.69.1-1019-RM-0140.tgz  0.69.1-1019-RM-0546.tgz  0.69.1-1019-RM-1601.tgz  0.69.1-1019-RM-1724.tgz  0.69.1-1019-RM-1820.tgz  0.69.1-1020-RM-0652.tgz  0.69.1-1020-RM-1636.tgz  0.69.2-1020-RM-1730.tgz  0.69.2-1020-RM-1804.tgz  0.69.2-1021-RM-0422.tgz  0.69.2-1023-RM-1141.tgz  0.69.2-1023-RM-2159.tgz  0.69.2-1024-RM-1643.tgz  0.69.2-1025-RM-0116.tgz  0.69.2-1025-RM0241.tgz  0.69.2-1025-RM0308.tgz  0.69.2-1025-RM0331.tgz  0.69.2-1025-RM0342.tgz  0.69.2-1026-RM0144.tgz  0.69.2-1026-RM0218.tgz  (+1025 more)
.blank_files/: animation_managerBLANK.c  manifest_Minimal.txt  manifest_None.txt
.catalog/: CHANGELOG.md  README.md  changelog.md
.fleet/: run.json  settings.json
.github/: CODEOWNERS  FUNDING.yml  check-version.ps1  conf-file_description.md  dependabot.yml  release-body.md  release.yml
.ofwcatalog/: CHANGELOG.md  DESCRIPTION.md
.utils/: .check-merge.sh  .subtree-subdir-helper.sh  add-app.sh  add-subtree.sh  bulk-update-apps.sh  bulk-update-subtrees.sh  gitconfig  subdir-helper.sh  subtree-subdir-helper.sh  update-app.sh  update-subtree.sh
2048/: .gitsubtree  README-catalog.md  application.fam  game_2048.c
3DPrint_Case/: RCWL0516_TopCase.stl  RCWL0516_TopandBottom.stl
4inrow/: .gitremote  .gitsubtree  4inrow.c  application.fam
AirTagGeneration/: .gitignore  README.md  RequestReport&Map.py  advanced_map_loc.py  request_reports.py  requirements.txt
DisplayCoordinates/: display_coordinates.py
Distr/: Nrf24_Scanner.fap
FindMyFlipper/: application.fam  findmy.c  findmy_i.h  findmy_state.c  findmy_state.h
FlipperZero-IFTTT_WiFi_Module/: APIndex.h  APMode.cpp  APMode.h  FlipperZero-IFTTT_WiFi_Module.ino  Global.cpp  Global.h  IFTTTMode.cpp  IFTTTMode.h  eepromclass.h
FlipperZero-IFTTT_app/: application.fam
FlipperZero-WiFi-Scanner_Module/: DebugHelpers.h  FlipperZero-WiFi-Scanner_Module.ino
FlipperZero-WiFi-Scanner_Module-ESP8266/: DebugHelpers.h  FlipperZero-WiFi-Scanner_Module-ESP8266.ino
KeyGeneration/: generate_keys.py
MarauderOTA/: MarauderOTA.ino
Mockups/: mockup_monitor_1.psd  scan_animation_1.psd
ModbusApp/: application.fam
ModuleEnclosure/: wifi_scanner_module_case_proto_top.stl
NRF24ChannelScanner/: application.fam  nrf24channelscanner.c
Releases/: README.md  findmy_Momentum.fap  (+12 more)
adc/: adc.h
applications-ext/reltest/: .gitignore  CMakeLists.txt  Makefile  build_and_upload_win.bat  build_win.bat  main.c  start.c
cmsis/: CMakeLists.txt  stm32f1.ld.in  stm32f1_flash.ld.in  stm32f4.ld.in
core-rs/: Cargo.toml
core-rs/flipper-core/src/: lib.rs
core-rs/flipper-f1-sys/: build.rs
core-rs/flipper-f1-sys/src/: lib.rs
core-rs/src/: lib.rs
examples/blinky/: CMakeLists.txt  blinky.c  blinky.cpp  stm32l0xx_hal_conf.h
examples/blinky-ll/: CMakeLists.txt  blinky.c
examples/custom-linker-script/: CMakeLists.txt  F407VG.ld
examples/esp32_example/main/: CMakeLists.txt  binaries.c  main.c
examples/freertos/: CMakeLists.txt  FreeRTOSConfig.h  main.c  main.cpp  main.h  stm32f1xx_hal_conf.h  stm32f4xx_hal_conf.h
examples/raspberry_example/: CMakeLists.txt  README.md
examples/raspberry_example/Src/: main.c
examples/stm32_example/: CMakeLists.txt  README.md
examples/stm32_example/Core/Inc/: stm32h7xx_hal_conf.h
examples/stm32_example/Src/: main.c  system_stm32f4xx.c
examples/template/: CMakeLists.txt
examples/zephyr_example/: CMakeLists.txt  README.md  sample.yaml
examples/zephyr_example/boards/: esp32_devkitc_wroom.overlay  esp32_devkitc_wrover.overlay
examples/zephyr_example/src/: main.c
hal/: CMakeLists.txt
lib/minmea/: CMakeLists.txt
minimal-client/: CMakeLists.txt  Makefile
minimal-client/src/: main.c  messages.c
stdperiph/: CMakeLists.txt
stm32-blinky/: CMakeLists.txt  main.c  stm32f10x_conf.h  stm32f1xx_hal_conf.h  stm32f2xx_hal_conf.h  stm32f4xx_conf.h  stm32f4xx_hal_conf.h  stm32g0xx_hal_conf.h  stm32l0xx_hal_conf.h
stm32-blinky-sources/: CMakeLists.txt  main.c
stm32-chibios/: CMakeLists.txt  board.c  board.h  chconf.h  halconf.h  main.c  mcuconf.h  nilconf.h  osalconf.h
stm32-chibios-template/chibios-nil-f4-template/: CMakeLists.txt
stm32-chibios-template/chibios-nil-f4-template/config/: mcuconf.h  nilconf.h
stm32-chibios-template/chibios-nil-f4-template/work/: test.c
stm32-hal-freertos-uart-tensorflow/: CMakeLists.txt  GDBCommands  README.md  stm32f40g_eval.cfg
stm32-hal-freertos-uart-tensorflow/Inc/: FreeRTOSConfig.h  color.h  constants.h  data_types.h  ffconf.h  main.h  main_functions.h  sd_diskio.h  sine_model_quantized.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
stm32-hal-freertos-uart-tensorflow/Src/: freertos.c  main.c  main_functions.cc  sine_model_quantized.cc  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c  ts_calibration.c
stm32-newlib/: CMakeLists.txt  main.c  newlib.c  stm32_flash.ld.in  stm32f10x_conf.h  stm32f1xx_hal_conf.h  stm32f2xx_hal_conf.h  stm32f4xx_conf.h  stm32f4xx_hal_conf.h  stm32g0xx_hal_conf.h
stm32-template/: CMakeLists.txt  main.c  stm32f10x_conf.h
target_lo/code/: CMakeLists.txt  prj.conf  west.yml
target_lo/code/include/: flipper_hal.h  main.h
target_lo/code/src/: flipper_hal.c  main.c
test/: CMakeLists.txt  README.md  qemu_test.cpp  run_qemu.sh  run_test.sh  serial_io_mock.cpp  serial_io_mock.h  serial_io_tcp.cpp  test.cpp  test_main.cpp
tests/bsp/: CMakeLists.txt  stm32g0xx_hal_conf.h  stm32l0xx_hal_conf.h  stm32l1xx_hal_conf.h
tests/cmsis/: CMakeLists.txt  main.c
tests/fetch/: CMakeLists.txt  stm32c0xx_hal_conf.h  stm32f0xx_hal_conf.h  stm32h7xx_hal_conf.h  stm32l0xx_hal_conf.h  stm32u0xx_hal_conf.h
tests/hal/: CMakeLists.txt  stm32f7xx_hal_conf.h  stm32g0xx_hal_conf.h  stm32g4xx_hal_conf.h  stm32l4xx_hal_conf.h  stm32u5xx_hal_conf.h
(+20678 files in other folders)
